<resources>
    <string name="app_name">PlanEat</string>
    <string name="back">back</string>
    <string name="shared">shared</string>
    <string name="list">list</string>
    <string name="home">home</string>
    <string name="explore">explore</string>
    <string name="shopping_list">Shopping List</string>
    <string name="hintEditTextShoppingList">Do you even need food?</string>
    <string name="myFridge">My Fridge</string>
    <string name="PreviousButton"><![CDATA[<]]></string>
    <string name="nextButton"><![CDATA[>]]></string>
    <string name="groups">groups</string>
    <string name="calendar">calendar</string>
    <string name="dinner">Dinner</string>
    <string name="launch">Launch</string>
    <string name="breakfast">Breakfast</string>
    <string name="insert_shared_name">Insert shared name here</string>
    <string name="saved_recipes">Saved recipes</string>
    <string name="meal_name">Meal name</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>
    <string name="insert_name_here">Insert name here</string>
</resources>