<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeIcon"
        android:layout_width="34dp"
        android:layout_height="59dp"
        android:contentDescription="@null"
        android:icon="@drawable/home"
        android:title="@string/back" />

    <item
        android:id="@+id/personIcon"
        android:layout_width="34dp"
        android:layout_height="59dp"
        android:contentDescription="@null"
        android:icon="@drawable/person"
        android:title="@string/calendar" />

    <item
        android:id="@+id/groupPeople"
        android:layout_width="34dp"
        android:layout_height="59dp"
        android:contentDescription="@null"
        android:icon="@drawable/group_peoples"
        android:title="@string/shopping_list" />
</menu>