<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".menus.sharedMeals.SharedMeal">


    <ImageView
        android:id="@+id/sfondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </ImageView>

    <EditText
        android:id="@+id/recipeNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:fontFamily="@font/relay_inter_bold"
        android:hint="@string/insert_name_here"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/sfondo"
        app:layout_constraintTop_toTopOf="@+id/sfondo">

    </EditText>


    <ImageView
        android:id="@+id/editIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="@+id/recipeNameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toEndOf="@+id/recipeNameEdit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:clickable="true"
        android:focusable="true">

    </ImageView>

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="55dp"
        android:gravity="top|start"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/sfondo"
        app:layout_constraintTop_toBottomOf="@+id/recipeNameEdit">

        <LinearLayout
            android:id="@+id/bigOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/breakfast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/relay_inter_bold"
                android:text="@string/ingredients"
                android:textColor="@color/textColor"
                android:textSize="20sp">

            </TextView>

            <ImageView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:src="@drawable/breakfast_line">

            </ImageView>

            <LinearLayout
                android:id="@+id/linearIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClickBreakfast"
                android:orientation="vertical">

            </LinearLayout>
            <Button
                android:id="@+id/buttonAdder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/long_stretch_rectangle"
                android:text="+">

            </Button>

            <TextView
                android:id="@+id/launch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/relay_inter_bold"
                android:text="@string/preparation"
                android:textColor="@color/textColor"
                android:textSize="20sp">

            </TextView>

            <ImageView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:src="@drawable/breakfast_line">

            </ImageView>

            <LinearLayout
                android:id="@+id/small2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClickLaunch"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/preparationEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Insert Here"
                    android:background="@null"
                    android:textColorHint="@color/textColor"
                    android:textSize="18sp">

                </EditText>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:src="@drawable/back_triangle"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/relay_inter_bold"
        android:padding="5dp"
        android:text="@string/back"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="98dp"
        android:layout_height="35dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>