<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".PlanningEats">


    <ImageView
        android:id="@+id/sfondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </ImageView>

    <TextView
        android:id="@+id/provolone"
        android:layout_width="182dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/stroke_rectangle"
        android:fontFamily="@font/relay_inter_bold"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sfondo">

    </TextView>





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="top|start"
        app:layout_constraintBottom_toBottomOf="@id/sfondo"
        app:layout_constraintEnd_toEndOf="@+id/sfondo"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/sfondo"
        app:layout_constraintTop_toBottomOf="@+id/provolone">

        <LinearLayout
            android:id="@+id/bigOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/breakfast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/breakfast"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/relay_inter_bold">
            </TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/breakfast_line">

            </ImageView>

        <LinearLayout
            android:id="@+id/small1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:onClick="onClickBreakfast"
            android:focusable="true">

            <!-- fallo editable, così la modifica della ricetta la fai tenendo premuto-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Insert Here"
                android:textColorHint="@color/textColor"
                android:layout_marginBottom="20dp">

            </TextView>

        </LinearLayout>

            <TextView
                android:id="@+id/launch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/launch"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/relay_inter_bold">
            </TextView>

            <ImageView
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:src="@drawable/breakfast_line">
            </ImageView>

            <LinearLayout
                android:id="@+id/small2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:clickable="true"
                android:onClick="onClickLaunch"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CIAOO">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CIAOO"
                    android:layout_marginBottom="20dp">

                </TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/dinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dinner"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/relay_inter_bold">
            </TextView>

            <ImageView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:src="@drawable/breakfast_line">
            </ImageView>

            <LinearLayout
                android:id="@+id/small3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:clickable="true"
                android:onClick="onClickDinner"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CIAOO">

                </TextView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>





    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:src="@drawable/back_triangle"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/relay_inter_bold"
        android:padding="5dp"
        android:text="@string/back"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="98dp"
        android:layout_height="35dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>